--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,15 @@
 		    <version>2.2.1.RELEASE</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>	    
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>	    
+		</dependency>
+		
 	</dependencies>
 
 	<build>
