젠킨스 파일 수

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,7 +33,7 @@ spec:
                 script {
                     git branch: 'main',
                         credentialsId: 'github-credentials',
-                        url: 'https://github.com/yooee/moyur_app.git'
+                        url: 'https://github.com/yooee/moyur-app.git'
                 }
             }
         }
@@ -41,7 +41,7 @@ spec:
             steps {
                 container('kaniko') {
                     sh '''
-                    /kaniko/executor --context git://github.com/yooee/moyur_app.git --dockerfile=Dockerfile --destination=renum/moyur:v1.0.0
+                    /kaniko/executor --context git://github.com/yooee/moyur-app.git --dockerfile=Dockerfile --destination=renum/moyur:v1.0.0
                     '''
                 }
             }
